tests/negative-fixtures/banned_thread_spawn_direct/src/lib.rs
pub fn spawn_thread() {
    let _handle = std::thread::spawn(|| 1_u8);
}
